# Programming_tutorial

./: .gitignore  AUTHORING.md  README.md  pyproject.toml  start.py
.github/agents/: repo-analyst.agent.md
.github/workflows/: test.yml
01_Python_Zaklady/: README.md
01_Python_Zaklady/01_datove_typy/: challenges.py  lesson.yaml
01_Python_Zaklady/02_podminky_cykly/: challenges.py  lesson.yaml
02_OOP/: README.md
03_Datove_Struktury_Algoritmy/: README.md
04_Git_a_Workflow/: README.md
05_Testing/: README.md
06_Cteni_a_Debugovani_Kodu/: README.md
07_Numpy_a_Matematika/: README.md
08_Machine_Learning/: README.md
09_Computer_Vision/: README.md
10_ROS2/: README.md
11_Linux_a_Terminal/: README.md
12_Networking_a_API/: README.md
13_Paralelismus_a_Async/: README.md
14_Projekty_a_Portfolio/: README.md
desktop/: __main__.py  app.py  server.py
engine/: __init__.py  adaptive.py  app.py  concept_graph.yaml  concepts.py  content.py  editor.py  feedback.py  lab.py  models.py  presenters.py  progress.py  projects.py  projects.yaml  recommend.py  reflection.py  runner.py  scaffold.py  scaffold_concepts.py  services.py  ui.py  validator.py  views.py  views_challenge.py  views_practice.py  workspace.py
reports/: phase_05_report.txt
tests/: test_concepts.py  test_content.py  test_editor.py  test_feedback.py  test_lab.py  test_presenters.py  test_progress.py  test_projects.py  test_recommend.py  test_reflection.py  test_scaffold.py  test_server.py  test_services_adaptive.py  test_session.py  test_state_model.py  test_validator.py  test_workspace.py
(+203 files in other folders)
